kajit/tests/snapshots/corpus__generated_rvsdg_postcard_vec_nested_struct_aarch64.snap
---
source: kajit/tests/corpus.rs
assertion_line: 471
expression: ir_text
---
lambda @0 (shape: "AddressList") {
  region {
    args: [%cs, %os]
    n3 = apply @1 [%cs:arg, %os:arg] -> [%cs, %os]
    results: [%cs:n3, %os:n3]
  }
}
