kajit/tests/snapshots/corpus__generated_rvsdg_postcard_vec_scalar_small_aarch64.snap
---
source: kajit/tests/corpus.rs
expression: ir_text
---
lambda @0 (shape: "ScalarVec") {
  region {
    args: [%cs, %os]
    n2 = apply @1 [%cs:arg, %os:arg] -> [%cs, %os]
    results: [%cs:n2, %os:n2]
  }
}
